# Airplay-CVE

./: Cargo.toml  README.md
CVE-2025-24132/: airborne_vuln_checker.py  airplay_scanner.py  airplay_simulator.py  airplay_version_detector.py  capture.pcapng
CVE-2025-24132/airborne_scan/: airborne_scan_results_20250501_215804.json  airborne_scan_results_20250501_225842.json
CVE-2025-24132/airplay_scan_results/: airplay_version_scan_20250501_142015.json  airplay_version_scan_20250501_215902.json  airplay_version_scan_20250501_225716.json
airborne_scan/: airborne_scan_results_20250502_084352.json  airborne_scan_results_20250502_084510.json
src/: cli.rs  main.rs  python_bridge.rs
src/discovery/: mdns.rs  mod.rs
src/models/: airplay_device.rs  mod.rs
src/network/: mod.rs  utils.rs
src/scanner/: api.rs  device_scanner.rs  mod.rs  result_handler.rs
src/simulator/: device_simulator.rs  mod.rs
src/version/: analyzer.rs  detector.rs  mod.rs
