[package]
name = "airplay-cve"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
tokio = { version = "1", features = ["full"] }
regex = "1.9"
log = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipnetwork = "0.20"
chrono = "0.4"

[features]
mdns_impl = []
